二手拍卖版块开始

--- a/index.html
+++ b/index.html
@@ -1226,152 +1226,249 @@
             </div>
         </div>
         <!-- 本月爆款结束 -->
-    </div>
-    <!-- 主体部分结束 -->
+        <!-- 二手拍卖开始 -->
+        <div class="zd_index_boom wrap clearfix">
+            <div class="zd_index_boom_tit clearfix">
+                <p>二手拍卖</p>
+            </div>
+            <div class="index_time_to_buy_left_box clearfix">
+                <div class="index_time_to_buy_left" style="height: 280px;">
+                    <a href="javascript:void(0)">
+                        <div class="index_time_to_buy_left_txt">
+                            <p class="index_time_to_buy_left_txt1">2.5折起二手卡地亚竞拍捡漏</p>
+                            <p class="index_time_to_buy_left_txt2">蓝气球/山度士/钥匙/Tank</p>
+                        </div>
+                        <i class="index_time_to_buy_left_shadow"></i>
+                        <img src="images/index_time_to_buy_left3.jpg">
+                    </a>
+                </div>
+            </div>
+            <div class="zd_index_boom_swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            2
+                        </a>
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            3
+                        </a>
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            4
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="javascript:void(0)">
+                            <img src="" alt="">
+                            1
+                        </a>
+                    </div>
+                </div>
+                <div class="zd_index_boom_swiper-button-next"></div>
+                <div class="zd_index_boom_swiper-button-prev"></div>
+            </div>
+            <!-- 二手拍卖结束 -->
+        </div>
+        <!-- 主体部分结束 -->
 
-    <!-- 万表网尾部开始 -->
-    <div class="footer wrap">
-        <div class="top_foot clearfix">
-            <a href="javascript:void(0)" class="help">
-                正品保障
-                <i class="help_icon1"></i>
-            </a>
-            <a href="javascript:void(0)" class="help">
-                免期分期
-                <i class="help_icon2"></i>
-            </a>
-            <a href="javascript:void(0)" class="help">
-                全球联保
-                <i class="help_icon3"></i>
-            </a>
-            <a href="javascript:void(0)" class="help">
-                假一赔三
-                <i class="help_icon4"></i>
-            </a>
-            <a href="javascript:void(0)" class="help">
-                终身售后
-                <i class="help_icon5"></i>
-            </a>
-        </div>
-    </div>
-    <div class="middle_foot clearfix">
-        <div class="wrap clearfix">
-            <div class="foot_help">
-                <p class="p1">客服电话</p>
-                <p class="p2">400-883-2688</p>
-                <p class="p3">外呼电话020-83931899</p>
-                <a href="javascript:void(0)" class="p4">售后维修</a>
+        <!-- 万表网尾部开始 -->
+        <div class="footer">
+            <div class="top_foot clearfix wrap">
+                <a href="javascript:void(0)" class="help">
+                    正品保障
+                    <i class="help_icon1"></i>
+                </a>
+                <a href="javascript:void(0)" class="help">
+                    免期分期
+                    <i class="help_icon2"></i>
+                </a>
+                <a href="javascript:void(0)" class="help">
+                    全球联保
+                    <i class="help_icon3"></i>
+                </a>
+                <a href="javascript:void(0)" class="help">
+                    假一赔三
+                    <i class="help_icon4"></i>
+                </a>
+                <a href="javascript:void(0)" class="help">
+                    终身售后
+                    <i class="help_icon5"></i>
+                </a>
             </div>
-            <div class="foot_list">
-                <ul>
-                    <li class="foot_list_tit">新手指南</li>
-                    <li><a href="javascript:void(0)">注册新会员</a></li>
-                    <li><a href="javascript:void(0)">购物流程</a></li>
-                    <li><a href="javascript:void(0)">手表小知识</a></li>
-                    <li><a href="javascript:void(0)">退换货流程</a></li>
-                </ul>
-                <ul>
-                    <li class="foot_list_tit">支 付</li>
-                    <li><a href="javascript:void(0)">支付方式</a></li>
-                    <li><a href="javascript:void(0)">分期付款</a></li>
-                    <li><a href="javascript:void(0)">发票说明</a></li>
-                    <li><a href="javascript:void(0)">支付问题</a></li>
-                </ul>
-                <ul>
-                    <li class="foot_list_tit">配 送</li>
-                    <li><a href="javascript:void(0)">包裹签收</a></li>
-                    <li><a href="javascript:void(0)">配送方式</a></li>
-                    <li><a href="javascript:void(0)">配送说明</a></li>
-                    <li><a href="javascript:void(0)">自提流程</a></li>
-                </ul>
-                <ul>
-                    <li class="foot_list_tit">万表保障</li>
-                    <li><a href="javascript:void(0)">正品保障</a></li>
-                    <li><a href="javascript:void(0)">售后服务</a></li>
-                    <li><a href="javascript:void(0)">价格保护</a></li>
-                    <li><a href="javascript:void(0)">七天退换说明</a></li>
-                </ul>
-                <ul>
-                    <li class="foot_list_tit tit_spc">开放合作</li>
-                    <li><a href="javascript:void(0)">关于万表</a></li>
-                    <li><a href="javascript:void(0)" class="tit_spc">商务合作</a></li>
-                    <li><a href="javascript:void(0)">万表声明</a></li>
-                </ul>
+        </div>
+        <div class="middle_foot clearfix">
+            <div class="wrap clearfix">
+                <div class="foot_help">
+                    <p class="p1">客服电话</p>
+                    <p class="p2">400-883-2688</p>
+                    <p class="p3">外呼电话020-83931899</p>
+                    <a href="javascript:void(0)" class="p4">售后维修</a>
+                </div>
+                <div class="foot_list">
+                    <ul>
+                        <li class="foot_list_tit">新手指南</li>
+                        <li><a href="javascript:void(0)">注册新会员</a></li>
+                        <li><a href="javascript:void(0)">购物流程</a></li>
+                        <li><a href="javascript:void(0)">手表小知识</a></li>
+                        <li><a href="javascript:void(0)">退换货流程</a></li>
+                    </ul>
+                    <ul>
+                        <li class="foot_list_tit">支 付</li>
+                        <li><a href="javascript:void(0)">支付方式</a></li>
+                        <li><a href="javascript:void(0)">分期付款</a></li>
+                        <li><a href="javascript:void(0)">发票说明</a></li>
+                        <li><a href="javascript:void(0)">支付问题</a></li>
+                    </ul>
+                    <ul>
+                        <li class="foot_list_tit">配 送</li>
+                        <li><a href="javascript:void(0)">包裹签收</a></li>
+                        <li><a href="javascript:void(0)">配送方式</a></li>
+                        <li><a href="javascript:void(0)">配送说明</a></li>
+                        <li><a href="javascript:void(0)">自提流程</a></li>
+                    </ul>
+                    <ul>
+                        <li class="foot_list_tit">万表保障</li>
+                        <li><a href="javascript:void(0)">正品保障</a></li>
+                        <li><a href="javascript:void(0)">售后服务</a></li>
+                        <li><a href="javascript:void(0)">价格保护</a></li>
+                        <li><a href="javascript:void(0)">七天退换说明</a></li>
+                    </ul>
+                    <ul>
+                        <li class="foot_list_tit tit_spc">开放合作</li>
+                        <li><a href="javascript:void(0)">关于万表</a></li>
+                        <li><a href="javascript:void(0)" class="tit_spc">商务合作</a></li>
+                        <li><a href="javascript:void(0)">万表声明</a></li>
+                    </ul>
+                </div>
+                <a href="javascript:void(0)"><img src="images/foot_Qc.jpg" class="foot_Qc"></a>
             </div>
-            <a href="javascript:void(0)"><img src="images/foot_Qc.jpg" class="foot_Qc"></a>
-        </div>
-        <div class="foot_info clearfix">
-            <a href="javascript:void(0)">万表app</a>
-            <a href="javascript:void(0)">万表名匠</a>
-            <a href="javascript:void(0)">奢品共享</a>
-            <a href="javascript:void(0)">新款手表</a>
-            <a href="javascript:void(0)">二手商城</a>
-            <a href="javascript:void(0)">热销</a>
-            <a href="javascript:void(0)">天猫万表网旗舰店</a>
-            <a href="javascript:void(0)">京东万表网旗舰店</a>
-            <a href="javascript:void(0)">手表资讯</a>
-            <a href="javascript:void(0)">天梭手表</a>
-            <span class="foot_slide_info">&gt;</span>
-        </div>
-        <div class="foot_info_list foot_info hide">
-            <a href="javascript:void(0)">浪琴手表</a>
-            <a href="javascript:void(0)">欧米茄手表</a>
-            <a href="javascript:void(0)">卡西欧手表</a>
-            <a href="javascript:void(0)">卡地亚手表</a>
-            <a href="javascript:void(0)">手表图片</a>
-            <a href="javascript:void(0)">手表评论</a>
-            <a href="javascript:void(0)">手表排行榜</a>
-            <a href="javascript:void(0)">珠宝新闻</a>
-            <a href="javascript:void(0)">手表问答</a>
-            <a href="javascript:void(0)">智能手表</a>
-            <a href="javascript:void(0)">信用卡中心</a>
-            <a href="javascript:void(0)">手表专题</a>
-            <a href="javascript:void(0)">手表常识</a>
-        </div>
-        <div class="copyright">
-            <span>万表网名表商城 版权所有 2009-2019</span>
-            <a href="javascript:void(0)">ICP备案证书号:粤ICP备09108738号</a>
-            <span>网监备案:4401060103141</span>
-            <p>广州市万表科技股份有限公司 地址:广州市番禺区番禺大道北60-1号</p>
-            <p>Copyright 2009-2019 WWW.WBIAO.CN.LTD ALL RIGHT RESERVED.</p>
-        </div>
-        <div class="final">
-            <div class="police clearfix">
-                <a href="javascript:void(0)"><img src="images/final1.png"></a>
-                <a href="javascript:void(0)"><img src="images/final2.png"></a>
-                <a href="javascript:void(0)"><img src="images/final3.png"></a>
+            <div class="foot_info clearfix">
+                <a href="javascript:void(0)">万表app</a>
+                <a href="javascript:void(0)">万表名匠</a>
+                <a href="javascript:void(0)">奢品共享</a>
+                <a href="javascript:void(0)">新款手表</a>
+                <a href="javascript:void(0)">二手商城</a>
+                <a href="javascript:void(0)">热销</a>
+                <a href="javascript:void(0)">天猫万表网旗舰店</a>
+                <a href="javascript:void(0)">京东万表网旗舰店</a>
+                <a href="javascript:void(0)">手表资讯</a>
+                <a href="javascript:void(0)">天梭手表</a>
+                <span class="foot_slide_info">&gt;</span>
             </div>
-            <div class="nice_link">
-                <a href="javascript:void(0)">联系QQ3268217127</a>
-                <a href="javascript:void(0)">折800网</a>
-                <a href="javascript:void(0)">音乐巴士</a>
-                <a href="javascript:void(0)">聚美优品优惠券</a>
+            <div class="foot_info_list foot_info hide">
+                <a href="javascript:void(0)">浪琴手表</a>
+                <a href="javascript:void(0)">欧米茄手表</a>
+                <a href="javascript:void(0)">卡西欧手表</a>
+                <a href="javascript:void(0)">卡地亚手表</a>
+                <a href="javascript:void(0)">手表图片</a>
+                <a href="javascript:void(0)">手表评论</a>
+                <a href="javascript:void(0)">手表排行榜</a>
+                <a href="javascript:void(0)">珠宝新闻</a>
                 <a href="javascript:void(0)">手表问答</a>
-                <a href="javascript:void(0)">搜了网</a>
-                <a href="javascript:void(0)">海鸥</a>
-                <a href="javascript:void(0)">健客网上药店</a>
-                <a href="javascript:void(0)">名表回收</a>
-                <a href="javascript:void(0)">律师</a>
-                <span class="foot_slide_info1">&gt;</span>
-                <div class="foot_info_list1 foot_info hide">
-                    <a href="javascript:void(0)">B2B平台</a>
-                    <a href="javascript:void(0)">美乐乐</a>
-                    <a href="javascript:void(0)">友情链接</a>
-                    <a href="javascript:void(0)">赫柏林</a>
-                    <a href="javascript:void(0)">盛时表行</a>
-                    <a href="javascript:void(0)">小红树</a>
-                    <a href="javascript:void(0)">驴妈妈旅游网</a>
-                    <a href="javascript:void(0)">查工资</a>
-                    <a href="javascript:void(0)">腕表专卖店</a>
-                    <a href="javascript:void(0)">万表网的售后服务</a>
-                    <a href="javascript:void(0)">手表品牌大全</a>
-                    <a href="javascript:void(0)">翡翠</a>
-                    <a href="javascript:void(0)">cps广告联盟</a>
-                    <a href="javascript:void(0)">手机大全</a>
-                    <a href="javascript:void(0)">手工diy</a>
-                    <a href="javascript:void(0)">好豆菜谱</a>
-                    <a href="javascript:void(0)">苹果绿养生网</a>
-                    <a href="javascript:void(0)">网站地图</a>
+                <a href="javascript:void(0)">智能手表</a>
+                <a href="javascript:void(0)">信用卡中心</a>
+                <a href="javascript:void(0)">手表专题</a>
+                <a href="javascript:void(0)">手表常识</a>
+            </div>
+            <div class="copyright">
+                <span>万表网名表商城 版权所有 2009-2019</span>
+                <a href="javascript:void(0)">ICP备案证书号:粤ICP备09108738号</a>
+                <span>网监备案:4401060103141</span>
+                <p>广州市万表科技股份有限公司 地址:广州市番禺区番禺大道北60-1号</p>
+                <p>Copyright 2009-2019 WWW.WBIAO.CN.LTD ALL RIGHT RESERVED.</p>
+            </div>
+            <div class="final">
+                <div class="police clearfix">
+                    <a href="javascript:void(0)"><img src="images/final1.png"></a>
+                    <a href="javascript:void(0)"><img src="images/final2.png"></a>
+                    <a href="javascript:void(0)"><img src="images/final3.png"></a>
+                </div>
+                <div class="nice_link">
+                    <a href="javascript:void(0)">联系QQ3268217127</a>
+                    <a href="javascript:void(0)">折800网</a>
+                    <a href="javascript:void(0)">音乐巴士</a>
+                    <a href="javascript:void(0)">聚美优品优惠券</a>
+                    <a href="javascript:void(0)">手表问答</a>
+                    <a href="javascript:void(0)">搜了网</a>
+                    <a href="javascript:void(0)">海鸥</a>
+                    <a href="javascript:void(0)">健客网上药店</a>
+                    <a href="javascript:void(0)">名表回收</a>
+                    <a href="javascript:void(0)">律师</a>
+                    <span class="foot_slide_info1">&gt;</span>
+                    <div class="foot_info_list1 foot_info hide">
+                        <a href="javascript:void(0)">B2B平台</a>
+                        <a href="javascript:void(0)">美乐乐</a>
+                        <a href="javascript:void(0)">友情链接</a>
+                        <a href="javascript:void(0)">赫柏林</a>
+                        <a href="javascript:void(0)">盛时表行</a>
+                        <a href="javascript:void(0)">小红树</a>
+                        <a href="javascript:void(0)">驴妈妈旅游网</a>
+                        <a href="javascript:void(0)">查工资</a>
+                        <a href="javascript:void(0)">腕表专卖店</a>
+                        <a href="javascript:void(0)">万表网的售后服务</a>
+                        <a href="javascript:void(0)">手表品牌大全</a>
+                        <a href="javascript:void(0)">翡翠</a>
+                        <a href="javascript:void(0)">cps广告联盟</a>
+                        <a href="javascript:void(0)">手机大全</a>
+                        <a href="javascript:void(0)">手工diy</a>
+                        <a href="javascript:void(0)">好豆菜谱</a>
+                        <a href="javascript:void(0)">苹果绿养生网</a>
+                        <a href="javascript:void(0)">网站地图</a>
+                    </div>
                 </div>
             </div>
         </div>
