实拍控   手表问答tab

--- a/controlDetails.html
+++ b/controlDetails.html
@@ -274,7 +274,8 @@
                 </div>
             </div>
         </div>
-        <div class="tab-change">   <!--媒体报道tab切换-->
+        <div class="tab-change">
+            <!--媒体报道tab切换-->
             <div class="ymainbox1" style="display: none">
                 <!--媒体报道详情页-->
                 <div class="position">您现在所在的位置：
@@ -2276,11 +2277,11 @@
                                     <dd>银行信用卡</dd>
                                 </dl>
                             </div>
-                           <div class="bottom">
-                               <dl style="border-bottom: 1px solid #ddd;">
-                                   <a class="ad">发广告的看这里</a>
-                               </dl>
-                           </div>
+                            <div class="bottom">
+                                <dl style="border-bottom: 1px solid #ddd;">
+                                    <a class="ad">发广告的看这里</a>
+                                </dl>
+                            </div>
                         </div>
                         <div class="watchright">
                             <div class="watch-problem">
@@ -2344,10 +2345,176 @@
                             </div>
                         </div>
                     </div>
+                    <div class="watch-midd">
+                        <div class="top">
+                            <div class="tit">常见手表问题</div>
+                            <a href="javascript:void(0)">更多<i>></i></a>
+                        </div>
+                        <div class="mid">
+                            <ul class="tabs">
+                                <li>常识</li>
+                                <li>质量</li>
+                                <li>导购</li>
+                                <li>价格</li>
+                                <li>对比</li>
+                                <li>推荐</li>
+                                <li>搭配</li>
+                                <li>使用</li>
+                                <li>真伪</li>
+                                <li>保养</li>
+                                <li>维修</li>
+                                <li>跨境</li>
+                                <li>表带</li>
+                                <li>表身</li>
+                                <li>机芯</li>
+                                <li>功能</li>
+                            </ul>
+                        </div>
+                        <div class="bot">
+                            <div class="box">
+                                <div class="l">
+                                    <div class="lquest">
+                                        <a href="javascript:void(0)"><i>问</i>香奈儿是哪个国家的品牌</a>
+                                        <div class="respon">
+                                            <i>答</i>暂无回答
+                                        </div>
+                                    </div>
+                                    <div class="bottom">
+                                        <ul>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">女士手表什么牌子好</a></span><span
+                                                    class="time">2014-10-23 09:37:22</span></li>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">男士手表什么牌子好</a></span><span
+                                                    class="time">2014-10-23 09:37:23</span></li>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">浪琴手表那个系列好</a></span><span
+                                                    class="time">2014-10-23 09:37:24</span></li>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">机械手表哪个牌子好</a></span><span
+                                                    class="time">2014-10-23 09:37:24</span></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="r">
+                                    <div class="lquest">
+                                        <a href="javascript:void(0)"><i>问</i>送手表代表什么意思</a>
+                                        <div class="respon">
+                                            <i>答</i>暂无回答
+                                        </div>
+                                    </div>
+                                    <div class="bottom">
+                                        <ul>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">梦见手表是什么意思</a></span><span
+                                                    class="time">2014-10-23 09:37:22</span></li>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">天梭是哪个国家的品牌</a></span><span
+                                                    class="time">2014-10-23 09:37:23</span></li>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">买手表要注意什么</a></span><span
+                                                    class="time">2014-10-23 09:37:24</span></li>
+                                            <li><span>•<i>问：</i><a href="javascript:void(0)">gucci是什么意思</a></span><span
+                                                    class="time">2014-10-23 09:37:24</span></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
+                <div class="yreponse">
+                    <p class="ff"> 推荐腕表</p>
+                    <div class="goodss">
+                        <ul class="item">
+                            <li>
+                                <img src="https://image8.wbiao.co/shop/201603_18_384241-5002_95900.jpg?x-oss-process=image/resize,m_pad,w_270,h_270,color_ffffff"
+                                    alt="">
+                                <div class="desc">
+                                    <p class="text">萧邦Chopard-IMPERIALE系列 384241-5002 女士自动机械表</p>
+                                    <p class="price">$199750</p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="https://image8.wbiao.co/shop/a42eb43ad9ba4334b872bd42900127a1.jpg?x-oss-process=image/resize,m_pad,w_270,h_270,color_ffffff"
+                                    alt="">
+                                <div class="desc">
+                                    <p class="text">名士Baume & Mercier-克莱斯麦CLASSIMA系列 MOA10356 石英女表</p>
+                                    <p class="price">$7216</p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="https:////image8.wbiao.co/shop/79c8e84fa32147028ee060da3530566e.jpg?x-oss-process=image/resize,m_pad,w_270,h_270,color_ffffff"
+                                    alt="">
+                                <div class="desc">
+                                    <p class="text">【2018年巴塞尔新款】瑞士艺术制表大师爱宝时（EPOS）-Sportive运动系列 3411.131.20.56.25 机械男表
+                                    </p>
+                                    <p class="price">$4863</p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="https://image8.wbiao.co/shop/201702_16_P0548HABI_10875.jpg?x-oss-process=image/resize,m_pad,w_270,h_270,color_ffffff"
+                                    alt="">
+                                <div class="desc">
+                                    <p class="text">PILO & CO GENEVE -CORLEONE系列 P0548HABI 自动机械男表</p>
+                                    <p class="price">$10</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="more">
+                    <div class="contaienr">
+                        <div class="first">
+                            <ul>
+                                <li>
+                                    <span class="top">最新手表问题</span>
+                                    <span class="mo">更多></span>
+                                </li>
+                                <li><a href="javascript:void(0)" class="a">• 杭州宝珀手表保养，宝珀保养中心</a><span class="timer">2017-11-16</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 朗格手表维修||杭州朗格手表服务中心</a><span class="timer">2017-11-16</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 宇舶手表停走||宇舶手表专修||临平宇舶维修中心</a><span class="timer">2017-11-15</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 【金华修名表】金华积家手表配表扣</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 【绍兴修手表】绍兴劳力士手表保养地址</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 名表专业维修就找杭州广诚</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 哪里手表维修价格实惠</a><span class="timer">2014-10-23 <span></li>
+                                <li><a href="javascript:void(0)"class="a">• 绍兴地区买手表的哪里折扣好</a><span class="timer">2014-10-23 <span></li>
+
+                            </ul>
+                        </div>
+                        <div class="first">
+                            <ul>
+                                <li>
+                                    <span class="top">热门排行榜</span>
+                                </li>
+                                <li><a href="javascript:void(0)" class="a">• 杭州宝珀手表保养，宝珀保养中心</a><span class="timer">2017-11-16</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 朗格手表维修||杭州朗格手表服务中心</a><span class="timer">2017-11-16</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 宇舶手表停走||宇舶手表专修||临平宇舶维修中心</a><span class="timer">2017-11-15</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 【金华修名表】金华积家手表配表扣</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 【绍兴修手表】绍兴劳力士手表保养地址</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 名表专业维修就找杭州广诚</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 哪里手表维修价格实惠</a><span class="timer">2014-10-23 <span></li>
+                                <li><a href="javascript:void(0)"class="a">• 绍兴地区买手表的哪里折扣好</a><span class="timer">2014-10-23 <span></li>
+
+                            </ul>
+                        </div>
+                        <div class="first">
+                            <ul>
+                                <li>
+                                    <span class="top">最新手表问题</span>
+                                </li>
+                                <li><a href="javascript:void(0)" class="a">• 杭州宝珀手表保养，宝珀保养中心</a><span class="timer">2017-11-16</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 朗格手表维修||杭州朗格手表服务中心</a><span class="timer">2017-11-16</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 宇舶手表停走||宇舶手表专修||临平宇舶维修中心</a><span class="timer">2017-11-15</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 【金华修名表】金华积家手表配表扣</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 【绍兴修手表】绍兴劳力士手表保养地址</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 名表专业维修就找杭州广诚</a><span class="timer">2014-10-23</span></li>
+                                <li><a href="javascript:void(0)"class="a">• 哪里手表维修价格实惠</a><span class="timer">2014-10-23 <span></li>
+                                <li><a href="javascript:void(0)"class="a">• 绍兴地区买手表的哪里折扣好</a><span class="timer">2014-10-23 <span></li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
-        <div class="yrightArea" style="display: none;"> <!--右边广告栏--> 
+        <div class="yrightArea" style="display: none;">
+            <!--右边广告栏-->
             <div class="topimg"><img src="https://image2.wbiao.co/others/up/201909/18/156880771371163.jpg" alt=""></div>
             <div class="brand_recommend">
                 <!--头条新闻-->
@@ -2478,7 +2645,9 @@
                     <li><a href="javascript:void(0)">山城:这款国产手表很漂亮，机械表，应该是正品的，戴了一个星期</a></li>
                     <li><a href="javascript:void(0)">浪琴:好评！有正规发票，正品！</a></li>
                     <li><a href="javascript:void(0)">浪琴:好评！有正规发票，正品！</a></li>
-                    <li><a href="javascript:void(0)">美度:美度手表可以的，万表值得信任，很好看，我个人是非常喜欢的，里面什么收据一应俱全，经朋友鉴定，正品，大家放心购买，[强][强][强][强][强][强]</a></li>
+                    <li><a
+                            href="javascript:void(0)">美度:美度手表可以的，万表值得信任，很好看，我个人是非常喜欢的，里面什么收据一应俱全，经朋友鉴定，正品，大家放心购买，[强][强][强][强][强][强]</>
+                    </li>
                     <li><a href="javascript:void(0)">天美时:很不错，孩子很喜欢，，，，，，，，，，，，，</a></li>
                     <li><a href="javascript:void(0)">爱宝时:刚收到货，挺不错的，我很满意哦</a></li>
                 </ul>
